[package]
name = "ezo_rtd"
version = "0.1.0"
authors = ["Joaquín R <globojorro@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.13.1"

[dependencies]
chrono = "0.4.0"
error-chain = "~0.10.0"
ezo_common = { git = "https://github.com/saibatizoku/ezo-common-rs.git", branch = "master" }
i2cdev = "0.3.1"

[profile.release]
lto = true
